--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,45 @@
 * {
   box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: #c9c2c2;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
 body {
-  margin: 20px 0 0;
-  background: radial-gradient(circle, #173260, #031322);
+  background: #031322; /* Fallback color */
 }
 
-.navbar {
-  margin: 20px 0 0;
-  background: #9ab8d5;
+.home-background {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: url("../images/home.jpg") no-repeat center center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+}
+
+.constellation-select {
+  background-color: #282c34;
+  color: white;
+  border: 1px solid #61dafb;
+  padding: 0.5em;
+  border-radius: 4px;
+  font-size: 1em;
+  transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+.constellation-select:hover {
+  background-color: #3a3f47; /* Hintergrundfarbe beim Hover */
+}
+
+.constellation-select:focus {
+  border-color: #21a1f1; /* Randfarbe beim Fokus */
+  outline: none; /* Standard-Fokus-Rahmen entfernen */
 }
